  * Give immediate indication of pressing of Fn-F2.
  * The same ACPI key codes may be used for wireless on as well as off.
  * Allow reporting via OSD of brightness changes. (Closes: #501577)
  * Tweaked notifications a bit:
    - Replaced the heuristic for determining which should be fast
      notifications with an extra parameter.
    - Fast notifications stay around for a bit longer.

  [ Raphael Geissert ]
  * Auto detect the playback devices and the playback switches
    Closes: #513552 -- Please auto detect the sound devices

  [ Ben Armstrong ]
  * Support ath5k wifi toggling and default to using it if ath_pci is not present.
  * Fix detection of rfkill on systems that don't have it.

 -- Ben Armstrong <synrg@sanctuary.nslug.ns.ca>  Tue, 03 Feb 2009 19:44:50 -0400

eeepc-acpi-scripts (1.0.11) unstable; urgency=low

  [ Ben Armstrong ]
  * VGA_ON and LVDS_OFF replace COMBINED_DISPLAY_SWITCHES to provide
    better default behaviour for VGA toggle.  See comments in
    /etc/default/eeepc-acpi-scripts for common variations (specify
    mode or use xinerama-style display).
  * Blacklist useless pcspkr module.
  * Fix VGA toggle: default to enable LVDS / disable VGA so that
    it will work when the external monitor is disconnected.

  [ Damyan Ivanov ]
  * when "soft-disabling" bluetooth, power down the USB port
  * improve long description a bit

  [ Raphael Geissert ]
  * test for OSD_SHOWN before checking for gnome-osd for consistency
  * add support for knotify but only use it if aosd_cat is not installed
    Closes: #513551 -- please add support for knotify
  * fix typo in notify()'s usage message
  * Add support for different suspend methods, but keep pm-suspend as the
    default.
    Closes: #499545 -- Configurable FnF1 key - suspend to ram or hibernate

 -- Damyan Ivanov <dmn@debian.org>  Mon, 02 Feb 2009 17:39:10 +0200

eeepc-acpi-scripts (1.0.10) unstable; urgency=low

  * add missing "--user $user" to dcop invocation.
    really closes: #499544
