@@ -16,4 +16,11 @@ configureSound() {
 				sed -r "s/^(.*'([^']+)'.*|[^']+())$/\\2/")"
     }
 
+    [ "$SOUND_VOLUME_STEP" ] || {
+	 case "$(grep ^00-00 /proc/asound/pcm 2>/dev/null)" in
+	     *ALC269*)	SOUND_VOLUME_STEP=3.125%; ;;
+	     *)		SOUND_VOLUME_STEP=2%; ;;
+	 esac
+    }
+
 }
